--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.29.0",
     "react-dom": "^18.3.1",
     "react": "^18.3.1",
-    "@headlessui/react": "^1.7.18",
-    "react-markdown": "^9.0.1"
+    "@google/genai": "^1.30.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
