--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "react-dom": "^18.3.1",
-    "react": "^18.3.1",
-    "@google/genai": "^1.30.0"
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
